tests/ui/closures/binder/bounds-on-closure-type-binders.stderr
error: bounds cannot be used in this context
  --> $DIR/bounds-on-closure-type-binders.rs:11:20
   |
LL |     let _ = for<T: Trait> || -> () {};
   |                    ^^^^^

error: aborting due to 1 previous error

